# news_collection_feishu

./: .gitignore  README.md  pyproject.toml
src/news_collection_feishu/: cli.py  fetch.py
