[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-collection-feishu"
dynamic = ["version"]
description = "News Collection Feishu CLI"
readme = "README.md"
requires-python = "<3.13"
license = "MIT"
keywords = []
authors = [
  { name = "lanseria", email = "your-email@example.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
build = [
  "pyinstaller>=6.3.0",
]

[project.scripts]
cli = "news_collection_feishu.main:app"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
